fix: corrected padding on small screens
Corrected padding on small screens and removed obsolete code

--- a/css/styles.css
+++ b/css/styles.css
@@ -254,10 +254,7 @@ a.button:focus{
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-}
-#reviews-container {
-  padding: 30px 40px 80px;
+  padding: 30px 40px 30px;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -328,7 +325,9 @@ a.button:focus{
     #restaurant-container, #reviews-container {
       width: 50%;
     }
-    
+    #restaurant-container{
+        padding-top:120px;
+    }
     .inside #footer {
       width: 50%;
     }
